--- a/untukmu/index.html
+++ b/untukmu/index.html
@@ -19,9 +19,31 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
-      nomorWhatsapp = ``;
+      ucapan = `Hi handsome!!!
+      Yes you, who else? 😌
+      Good morning My Guduuu🌞
+      You've never celebrated Valentine's Day, have you? 
+      Ahh, I've never done that either
+      But today I celebrate Valentine's Day with people who are sometimes indifferent, sometimes cheerful.
+      Oh my god🙇‍♀️
+      Okay, now we're Valentine's partners👫
+      Ah, don't take too long, it's time for me to say it 😌
+      HAPPY VALENTINE'S DAY TO YOU MY GUDU😘🥰
+      Sorry, I don't have chocolate and I don't have flowers🥺
+      I only have love for you❤ cuakssss🫢
+      Just kidding sorry sorry😁
+      I hope you enjoy having a friend like me who is a bit crazy😜
+      Haha😁
+      Is the script I made good? yes sure🤗
+      May you always be happy every day. Valentine's Day does not fall on February 14th
+      Valentine's Day is every day!!!😍
+      Oh yes I want to say something😁
+      You Love me? hahaah🙊
+      Type your reply on my WA
+      Your special friend
+      NAILA😱`;
+      musik = `music.m4a`;
+      nomorWhatsapp = `089529742322`;
       idTelegram = ``;
 
       DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
